# finitelib

./: Cargo.toml  README.md
.github/workflows/: publish.yml
src/: bigi.rs  common.rs  complex.rs  field.rs  gf.rs  group.rs  lib.rs  polynomial.rs  prelude.rs  ring.rs  signed.rs  utils.rs
src/bigi/: convert.rs  format.rs  frac.rs  mod.rs  montgomery.rs  ops.rs  prelude.rs  prime.rs  rings.rs  serde.rs
src/common/: fields.rs  groups.rs  rings.rs
src/gf/: binary.rs  mod.rs  montgomery.rs  prime.rs  splitting.rs
