[package]
name = "finitelib"
version = "0.1.7"
edition = "2021"
authors = ["Alexander Khlebushchev"]
license = "MIT"
repository = "https://github.com/fomalhaut88/finitelib"
description = "A Rust library for advanced maths over finite groups, fields, their extensions, multi precision operations, euclidean rings, polynomials and related things."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
